🔨 Add script to prevent dark mode bug

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -825,7 +825,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .HeaderContainerHamburgerMenu {
   position: relative;
-  margin-left: auto;
   display: flex;
   height: 100%;
   align-items: center;
@@ -877,34 +876,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   z-index: 10;
 }
 
-/*.dark .HeaderContainerHamburgerMenuItems {
-  background-color: rgb(17 24 39);
-  border-color: rgb(156 163 175);
-}*/
-
-.darkModeButtonMobile {
+.darkModeButton {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: transparent;
-  color: rgb(156 163 175);
-}
-
-.darkModeButtonDesktop {
-  display: none;
-  background-color: transparent;
-}
-
-.darkModeButtonMobile,
-.darkModeButtonDesktop {
   width: 2rem;
   height: 2rem;
   margin-right: 1rem;
+  margin-left: auto;
+  background-color: transparent;
   cursor: pointer;
+  color: rgb(156 163 175);
 }
 
-.dark .darkModeButtonMobile,
-.dark .darkModeButtonDesktop {
+.dark .darkModeButton{
   color: rgb(229 231 235);
 }
 
@@ -914,35 +899,14 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-right: 5.55555%;
   }
 
-  .darkModeButtonMobile,
-  .darkModeButtonDesktop {
-    margin-right: 0;
-    margin-left: 1rem;
-  }
-
   .HeaderContainerHamburgerMenu {
     gap: 10px;
   }
 }
 
-@media (min-width: 768px) {
-  .darkModeButtonMobile,
-  .darkModeButtonDesktop {
-    margin-left: 2rem;
-    color: rgb(156 163 175);
-  }
-}
-
 @media (min-width: 1024px) {
-  .darkModeButtonMobile {
-    display: none;
-  }
-
-  .darkModeButtonDesktop {
-    display: flex;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  .darkModeButton {
+    margin-left: 2rem;
   }
 
   .HeaderContainerMenuItems {
